# segmentation-with-depth-prediction

./: .gitignore  README.md  pyproject.toml
results/: q2_report.md
src/: check_classes.py  dataset.py  evaluate.py  losses.py  model.py  train.py  viz.py
